# redteampython

blackhatpython/: netcat.py  proxy.py  tcpclient.py  udpclient.py
blackhatpython/ssh_cmd/: pyproject.toml  rforward.py  ssh_cmd.py  ssh_rcmd.py  ssh_server.py
