[project]
name = "ssh-cmd"
version = "0.1.0"
description = ""
authors = [
    {name = "trop3n",email = "jasondkimm@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paramiko (>=3.5.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "ssh_cmd", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
